fixtures/cs-hash-01/good/local-createHash-stub.ts
export function hashPassword(password: string) {
	function createHash(_algo: string) {
		return { update: () => ({ digest: () => "x" }) };
	}
	return createHash("md5");
}
